--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:h2:file:~/theater
 spring.datasource.driverClassName = org.h2.Driver
 spring.datasource.username = sa
 spring.datasource.password =
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
